feature: cards IDs are added feature: global variable are removed, datatransfer is used instead

--- a/index.html
+++ b/index.html
@@ -25,32 +25,32 @@
 
 <main class="cardsContainer">
   
-  <article class="card" draggable="true">
+  <article id="card-1" class="card" draggable="true">
     <h2 class="cardTitle">Карточка 1</h2>
     <img class="cardImage" src="https://images.unsplash.com/photo-1434873740857-1bc5653afda8?q=80&amp;w=2900&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
   </article>
 
-  <article class="card" draggable="true">
+  <article id="card-2" class="card" draggable="true">
     <h2 class="cardTitle">Карточка 2</h2>
     <img class="cardImage" src="https://images.unsplash.com/photo-1522303225746-3037391fba31?q=80&amp;w=2788&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
   </article>
 
-  <article class="card" draggable="true">
+  <article id="card-3" class="card" draggable="true">
     <h2 class="cardTitle">Карточка 3</h2>
     <img class="cardImage" src="https://images.unsplash.com/photo-1572583949319-3d1ea748e486?q=80&amp;w=2864&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
   </article>
 
-  <article class="card" draggable="true">
+  <article id="card-4" class="card" draggable="true">
     <h2 class="cardTitle">Карточка 4</h2>
     <img class="cardImage" src="https://images.unsplash.com/photo-1561837053-27e54d9ea60f?q=80&amp;w=2787&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
   </article>
 
-  <article class="card" draggable="true">
+  <article id="card-5" class="card" draggable="true">
     <h2 class="cardTitle">Карточка 5</h2>
     <img class="cardImage" src="https://images.unsplash.com/photo-1561397413-d6c848ce5154?q=80&amp;w=2864&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
   </article>
 
-  <article class="card" draggable="true">
+  <article id="card-6" class="card" draggable="true">
     <h2 class="cardTitle">Карточка 6</h2>
     <img class="cardImage" src="https://images.unsplash.com/photo-1552945574-fdbbd8055cf3?q=80&amp;w=2799&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
   </article>
